<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.dreamsportslabs</groupId>
  <artifactId>guardian</artifactId>
  <version>0.0.2-SNAPSHOT</version>

  <packaging>jar</packaging>
  <name>guardian</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <app.release.artifact>/target/guardian</app.release.artifact>
    <google.guava.version>33.3.1-jre</google.guava.version>
    <google-api-client.version>2.7.0</google-api-client.version>
    <fusionauth-jwt.version>5.3.3</fusionauth-jwt.version>
    <slf4j.version>2.0.7</slf4j.version>
    <logback.version>1.5.8</logback.version>
    <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
    <vertx-rest.version>1.1.0</vertx-rest.version>
    <vertx.version>4.5.10</vertx.version>
    <guice.version>5.1.0</guice.version>
    <lombok.version>1.18.34</lombok.version>
    <caffeine.version>3.1.8</caffeine.version>
    <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
    <rest-assured.version>5.5.1</rest-assured.version>
    <hamcrest.version>3.0</hamcrest.version>
    <testcontainers-redis.version>2.2.2</testcontainers-redis.version>
    <maven-compiler-version>3.8.1</maven-compiler-version>
    <maven.failsafe.plugin.version>3.5.3</maven.failsafe.plugin.version>
    <maven.jacoco.plugin.version>0.8.13</maven.jacoco.plugin.version>
    <junit.version>5.12.2</junit.version>
    <testcontainers.version>1.20.5</testcontainers.version>
    <hikari-cp.version>6.3.0</hikari-cp.version>
    <jedis.version>6.0.0</jedis.version>
    <liquibase.version>4.27.0</liquibase.version>
    <wiremock.version>3.13.0</wiremock.version>
    <jacoco.it.exec-file.path>${project.build.directory}/coverage-reports/jacoco-it.exec</jacoco.it.exec-file.path>
  </properties>

  <dependencies>

    <dependency>
      <groupId>com.dream11</groupId>
      <artifactId>vertx-rest</artifactId>
      <version>${vertx-rest.version}</version>
    </dependency>

    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-config-hocon</artifactId>
    </dependency>

    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-web-client</artifactId>
    </dependency>

    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-redis-client</artifactId>
    </dependency>

    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-core</artifactId>
    </dependency>

    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-rx-java3</artifactId>
    </dependency>

    <dependency>
      <groupId>net.logstash.logback</groupId>
      <artifactId>logstash-logback-encoder</artifactId>
      <version>${logstash-logback-encoder.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${google.guava.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.api-client</groupId>
      <artifactId>google-api-client</artifactId>
      <version>${google-api-client.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>${guice.version}</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>

    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-config</artifactId>
      <version>${vertx.version}</version>
    </dependency>

    <dependency>
      <artifactId>vertx-mysql-client</artifactId>
      <groupId>io.vertx</groupId>
      <version>${vertx.version}</version>
    </dependency>

    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>${caffeine.version}</version>
    </dependency>

    <dependency>
      <groupId>io.fusionauth</groupId>
      <artifactId>fusionauth-jwt</artifactId>
      <version>${fusionauth-jwt.version}</version>
    </dependency>

    <!-- Test Dependencies Start-->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>${rest-assured.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>${hamcrest.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>mysql</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.redis</groupId>
      <artifactId>testcontainers-redis</artifactId>
      <version>${testcontainers-redis.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-core</artifactId>
      <version>${liquibase.version}</version> <!-- Use latest stable -->
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>${mysql-connector-java.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>${hikari-cp.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>redis.clients</groupId>
      <artifactId>jedis</artifactId>
      <version>${jedis.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>3.0.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.wiremock</groupId>
      <artifactId>wiremock</artifactId>
      <version>${wiremock.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Test Dependencies End-->
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-stack-depchain</artifactId>
        <version>${vertx.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-version}</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.3</version>
        <executions>
          <execution>
            <id>create-fat-jar</id>
            <phase>none</phase>
          </execution>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer
                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>com.dreamsportslabs.guardian.Main</Main-Class>
                    <Main-Verticle>com.dreamsportslabs.guardian.verticle.MainVerticle</Main-Verticle>
                    <X-Compile-Source-JDK>17</X-Compile-Source-JDK>
                    <X-Compile-Target-JDK>17</X-Compile-Target-JDK>
                  </manifestEntries>
                </transformer>
                <transformer
                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
              <outputFile>${project.basedir}/${app.release.artifact}/${project.artifactId}.jar
              </outputFile>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven.failsafe.plugin.version}</version>
        <configuration>
          <argLine>${failsafe.jacoco.args}</argLine>
          <systemPropertyVariables>
            <!-- Find Extensions automatically from META-INF/services directory-->
            <junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
          </systemPropertyVariables>
        </configuration>

        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${maven.jacoco.plugin.version}</version>
        <configuration>
          <excludes>
            <exclude>**/verticle/**</exclude>
            <exclude>**/injection/**</exclude>
          </excludes>
        </configuration>
        <executions>

          <execution>
            <id>pre-integration-test</id>
            <goals>
              <goal>prepare-agent-integration</goal>
            </goals>
            <configuration>
              <destFile>${jacoco.it.exec-file.path}</destFile>
              <propertyName>failsafe.jacoco.args</propertyName>
            </configuration>
          </execution>

          <execution>
            <id>post-integration-test</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>${jacoco.it.exec-file.path}</dataFile>
              <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
            </configuration>
          </execution>
          <!-- TODO: add execution for coverage -->
        </executions>

      </plugin>
    </plugins>
  </build>

</project>
